<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".presentation.ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:id="@+id/cv_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/title_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_test_cv"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@id/view_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="12sp"
                    android:text="@string/test_definition"
                    app:layout_constraintStart_toEndOf="@id/view_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_1"/>

                <View
                    android:id="@+id/view_1"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:background="@drawable/question_mark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:id="@+id/cv_body_1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_head">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/title_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/try_scan"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_scan"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/btn_scan"
                    android:layout_width="0dp"
                    android:layout_height="72dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:background="@drawable/image_button_ripple"
                    android:src="@drawable/scanning"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/cd_scan_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:id="@+id/cv_body_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_body_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/title_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_test"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    style="@style/TextNormal"
                    android:id="@+id/tv_no_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    android:visibility="invisible"
                    android:text="@string/no_history_data"
                    app:layout_constraintTop_toBottomOf="@id/title_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_all_list"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_test_result"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    tools:itemCount="3"
                    android:visibility="gone"
                    tools:listitem="@layout/list_item"
                    app:layout_constraintTop_toBottomOf="@id/title_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_all_list"/>

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/btn_all_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="14sp"
                    android:paddingHorizontal="16dp"
                    android:background="@drawable/image_button_ripple"
                    android:textColor="@color/md_theme_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gh_50"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:id="@+id/cv_body_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gh_50"
            app:layout_constraintTop_toBottomOf="@id/cv_body_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <View
                    android:id="@+id/view_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:background="@drawable/coding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/title_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_model"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:id="@+id/cv_body_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            app:rippleColor="?attr/colorControlHighlight"
            app:layout_constraintStart_toStartOf="@id/gh_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_body_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <View
                    android:id="@+id/view_3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="24dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:background="@drawable/user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    style="@style/TextHeader2"
                    android:id="@+id/title_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_3"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>